# sdl-gles-cairo-demo

./: .gitignore  .swn  ChangeLog.md  LICENSE  LICENSE.save0  Makefile  README.md  config.yaml  fragment-color  fragment-mesh  fragment-mesh-ayotz  fragment-mesh-test  fragment-texture  package.yaml  sdl-cairo-gl-photo-cube.cabal  sdl-gles-cairo-demo.cabal  vertex-color  vertex-mesh  vertex-mesh-ayotz  vertex-texture-faces
app/: Main.hs
assets/: bandits.png.base64  convert  functions.bash  nefeli.png.base64  neske.png.base64  plaza-1.png.base64  plaza-2.png.base64  plaza-3.png.base64  plaza-4.png.base64  vikings.png.base64
assets/image-scripts/: functions.bash  movie-cartoonise.sh  package.json  tmp.py
assets/image-scripts/lib/: index.js  util-gen.js  util-io.js  util-pred.js  util.js
assets/image-scripts/movies-base64-to-haskell/src/: util-daggy.js  util-immutable.js  util.js
assets/image-scripts/src/: index.js  util-bilby.js  util-io.js
assets/image-scripts/text-files-to-haskell/lib/: index.js  util-bilby.js  util-daggy.js  util-immutable.js  util-io.js
assets/image-scripts/text-files-to-haskell/src/: index.js  util-gen.js  util-io.js  util-pred.js
assets/paths/cat/src/: index.js
save/: save.hs
src/: clib.c
src/Graphics/SGCDemo/: Config.hs  Coords.hs  CubeFaces.hs  Draw.hs  Events.hs  Extras.hs  Forum-old.hs  Forum.hs  Glyph.hs  Launch.hs  Pixels.hs  Scene.hs  Shader.hs  Types.hs  Util.hs  Util2.hs  Wolf.hs  WolfObjOne.hs
src/GraphicsDemo/: Config.hs  Coords.hs  CubeFaces.hs  Draw.hs  Events.hs  Extras.hs  Launch.hs  Pixels.hs  Shader.hs  Types.hs  Util.hs  Util2.hs  Wolf.hs
src/SDLTricksCube/: Config.hs  Coords.hs  CubeFaces.hs  Draw.hs  Events.hs  Extras.hs  Launch.hs  Pixels.hs  SaveFixedFunction.hs  Shader.hs  Types.hs  TypesObj.hs  Util.hs  Util2.hs  Wolf.hs  savePixelsRGB.hs
