name:           sdl-cairo-gl-photo-cube
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/sdl-cairo-gl-photo-cube#readme>
homepage:       https://github.com/githubuser/sdl-cairo-gl-photo-cube#readme
bug-reports:    https://github.com/githubuser/sdl-cairo-gl-photo-cube/issues
author:         Allen Haim
maintainer:     allen@netherrealm.net
copyright:      2018 Allen Haim
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/sdl-cairo-gl-photo-cube

library
  exposed-modules:
      SDLTricksCube.Config
      SDLTricksCube.Coords
      SDLTricksCube.CubeFaces
      SDLTricksCube.Draw
      SDLTricksCube.Events
      SDLTricksCube.Extras
      SDLTricksCube.ImageMock
      SDLTricksCube.Launch
      SDLTricksCube.Pixels
      SDLTricksCube.Shader
      SDLTricksCube.Types
      SDLTricksCube.Util
      SDLTricksCube.Util2
      SDLTricksCube.Wolf
  c-sources:
      src/clib.c
  other-modules:
      Paths_sdl_cairo_gl_photo_cube
  hs-source-dirs:
      src
  ghc-options: -XPatternSynonyms
  build-depends:
      JuicyPixels >=3.2.8.3
    , OpenGL >=3.0.2.0 && <3.0.3
    , OpenGLRaw >=3.2.7.0 && <3.2.8
    , StateVar >=1.1.0.4 && <1.1.1
    , array >=0.5.1.1
    , base >=4.7 && <5
    , base64-bytestring >=1.0.0.1
    , bytestring >=0.10.8.1
    , cairo >=0.13.4.1 && <0.13.5
    , filepath >=1.4.1.1
    , linear >=1.20.7 && <1.21
    , sdl2 >=2.3.0 && <2.4
    , sdltricks-cat >=0.1.0.4
    , svg-tree >=0.6.2.1 && <0.6.3
    , time
    , vector >=0.11.0.0
    , random>= 1.1 && <2
    , matrix >=0.3.5 && <0.4
    , Stack >=0.3.2 && <0.4
    , cond >=0.4.1.1 && <0.4.2
  default-language: Haskell2010
