name:           sdl-gles-cairo-demo
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/githubuser/sdl-gles-cairo-demo#readme>
homepage:       https://github.com/githubuser/sdl-gles-cairo-demo#readme
bug-reports:    https://github.com/githubuser/sdl-gles-cairo-demo/issues
author:         Allen Haim
maintainer:     allen@netherrealm.net
copyright:      2018 Allen Haim
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/sdl-gles-cairo-demo

library
  exposed-modules:
      Graphics.SGCDemo.Config
      Graphics.SGCDemo.Coords
      Graphics.SGCDemo.CubeFaces
      Graphics.SGCDemo.Draw
      Graphics.SGCDemo.Events
      Graphics.SGCDemo.Extras
      Graphics.SGCDemo.ImageData
      Graphics.SGCDemo.Launch
      Graphics.SGCDemo.Pixels
      Graphics.SGCDemo.Shader
      Graphics.SGCDemo.Types
      Graphics.SGCDemo.Util
      Graphics.SGCDemo.Util2
      -- Graphics.SGCDemo.Wolf
  c-sources:
      src/clib.c
  hs-source-dirs:
      src
  ghc-options: -XPatternSynonyms
  build-depends:
      sdl-cairo-demo-cat >= 0.1.0.4 && <0.1.1
    , mesh-obj-gles >= 0.1.0.0 && <0.1.1
    , JuicyPixels >=3.2.8.3
    , OpenGL >=3.0.2.0 && <3.0.3
    , OpenGLRaw >=3.2.7.0 && <3.2.8
    , StateVar >=1.1.0.4 && <1.1.1
    , array >=0.5.1.1
    , base >=4.7 && <5
    , base64-bytestring >=1.0.0.1
    , bytestring >=0.10.8.1
    , cairo >=0.13.4.1 && <0.13.5
    , filepath >=1.4.1.1
    , linear >=1.20.7 && <1.21
    , sdl2 >=2.3.0 && <2.4
    , svg-tree >=0.6.2.1 && <0.6.3
    , split >= 0.2.3.3 && <0.2.4
    , time
    , vector >=0.11.0.0
    , random>= 1.1 && <2
    , matrix >=0.3.5 && <0.4
    , Stack >=0.3.2 && <0.4
    , cond >=0.4.1.1 && <0.4.2
    , raw-strings-qq >= 1.1 && <2
    , Glob >= 0.9.2 && <0.10
    , deepseq >= 1.4.2.0 && <1.4.4
    , containers >= 0.5.7.1 && <0.5.11
    , yaml >= 0.8.28 && <0.9
  default-language: Haskell2010
